BUGFIX removed weird overflow from editor

--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,7 @@ button.choosen:after {
     position: relative;
     width: 36vh;
     height: 36vh;
+    transform: translate(0.1px, 0.1px);
 }
 .Editor .hashtag{
     pointer-events: none; 
@@ -202,5 +203,6 @@ button.choosen:after {
     left: 0;
     width: 100%;
     height: 100%;
+    transform: translate(0.1px, 0.1px);
 }
 
